Fix Bootstrap Sass for vertical-align in table cells - Created $table-cell-vertical-align for change vertical alignment; - Created .table class in app.scss for change vertical alignment.

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -37,3 +37,6 @@ $input-color-placeholder: lighten($text-color, 30%);
 // Panels
 $panel-default-heading-bg: #fff;
 $panel-default-text: #636b6f;
+
+// Tables
+$table-cell-vertical-align: middle !default;
